Fix solved breadcrumbs in dark mode

--- a/client/header.less
+++ b/client/header.less
@@ -161,18 +161,18 @@
         left: auto; right: 20px;
       }
     }
+    li.solved {
+      background-color: #00ff0011;
+      a, a:hover, a:focus {
+        background: initial;
+      }
+    }
+    li.active.solved {
+      background-color: #002200;
+    }
   }
   .tooltip-inner { .bb-buttonbar .tooltip-inner; }
   .tooltip.bottom .tooltip-arrow { .bb-buttonbar .tooltip.bottom .tooltip-arrow; }
-  .solved {
-    background-color: #00ff0011;
-  }
-  .active.solved {
-    background-color: #002200;
-    a, a:hover, a:focus {
-      background: initial;
-    }
-  }
 
 }
 
